1- back end login(authentication) integrated , 2 -toggle sidebar added

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,6 +9,14 @@
 
 }
 
+.collapse-button {
+    margin-top:10px;
+    margin-left:5px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+}
+
 
 .sdNav {
     background: grey ;
