--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,13 +8,16 @@
 
 <!--class="container-fluid px-0 overflow-hidden"-->
 <div class="container-fluid px-0 overflow-hidden"  >
-<div class="row">
+<div class="row" *ngIf=" isLoggedIn() && isVisibleSidebar()">
 
 
-  <div class="col-lg-2 col-md-3 col-sm-2 min-vh-100 " style="background:#1b1c1b;">
-    <app-sidenav ></app-sidenav>
+  <div class="d-none d-sm-block col-lg-2 col-md-3 col-sm-2 min-vh-100 " style="background: #1b1c1b;" >
+    <app-sidenav  ></app-sidenav>
   </div>
   <div class="pg col-lg-10 col-md-9 col-sm-10  col-xs-12 min-vh-100" >
+
+    <button class="collapse-button btn " type="button" (click)="toggleSidebar()">||||</button>
+
     <router-outlet></router-outlet>
   </div>
 
@@ -22,7 +25,15 @@
 </div>
 </div>
 
+<div class="container-fluid px-0 overflow-hidden"  >
+<div class="row"  *ngIf=" !isLoggedIn()  ||  !isVisibleSidebar()">
 
+  <div class="pg min-vh-100">
+    <button class="collapse-button btn " type="button" (click)="toggleSidebar()" *ngIf="isLoggedIn()" >||||</button>
+    <router-outlet></router-outlet>
+  </div>
+</div>
+</div>
 
 <footer style="margin-top: none;">
   <app-footer></app-footer>
