--- a/src/app/global_comman/header/header.component.css
+++ b/src/app/global_comman/header/header.component.css
@@ -1,3 +1,17 @@
+
+.btn-d{
+  margin-top:0.5vh;
+  font-weight: bold;
+}
+
+.uN {
+  color: yellow;
+  font-size: 20px;
+  padding-top:10px;
+  text-decoration: none; 
+  font-weight: bold;
+}
+
 .navbar {
     background-color: midnightblue;
     
@@ -6,6 +20,8 @@
       font-weight: bold;
       font-size: 20px;
     }
+
+
   
     .nav-link {
       color: white;
@@ -15,6 +31,8 @@
         background-color: royalblue;
       }
     }
+
+
   
     .navbar-toggler {
       border-color: rgba(255, 255, 255, 0.1);
