--- a/src/app/global_comman/header/header.component.html
+++ b/src/app/global_comman/header/header.component.html
@@ -1,11 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/">YM</a>
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+          <li style="margin-top:4px;margin-right:40px;">
+            <a class="uN  disabled" *ngIf=" isLoggedIn()"  >Hi! {{getUserName()}}</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/home">Home</a>
           </li>
@@ -13,7 +17,10 @@
             <a class="nav-link" routerLink="/test">Test</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/login">Login</a>
+            <a class="nav-link" routerLink="/login" *ngIf=" !isLoggedIn()">Login</a>
+          </li>
+          <li class="nav-item">
+            <button  type="button" class="btn btn-danger" (click)="logout()" *ngIf=" isLoggedIn()" >LOGOUT</button> 
           </li>
         </ul>
       </div>
