--- a/src/app/global_comman/login/login.component.html
+++ b/src/app/global_comman/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <div class="card" style="padding: 20px;">
-        <form  >
+        <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
             <input type="text"
             ngModel
             name="username"
@@ -21,6 +21,7 @@
             value="Login"
             class="btn btn-outline-primary form-control rounded-0">
         </form>
+        
     </div>
 </div>
 
