--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .pg {
     
     background: lightgray ;
-    
+
     /*
     background: sprindarggreen ;
     height: 1250px; */
@@ -15,6 +15,8 @@
     background-color: black;
     color: white;
     font-weight: bold;
+    position: absolute;
+    z-index: 10; /* Ensure the button is above the blurred content */
 }
 
 
@@ -23,3 +25,17 @@
     /*height: 1250px;     height: 125vh; */
 
 }
+
+.disable-on-mobile {
+    pointer-events: none;
+    opacity: 0.5; /* Optional: To visually indicate that the element is disabled */
+  }
+  
+  @media (min-width: 576px) {
+    .disable-on-mobile {
+      pointer-events: auto;
+      opacity: 1; /* Reset opacity on larger screens */
+    }
+  }
+
+
