Removed copyright details

--- a/src/app/global_comman/footer/footer.component.html
+++ b/src/app/global_comman/footer/footer.component.html
@@ -32,7 +32,7 @@
               
               <div class="col item social "><a  href="#"></a><a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"></a></div> 
           </div>
-          <p class="copyright">Developed for YM - Developed By GreenShade-Sri Lanka(2024)</p>
+          <!-- <p class="copyright">Developed for YM - Developed By GreenShade-Sri Lanka(2024)</p> -->
       </div>
   </footer>
 </div>
