minor change done new component created

--- a/src/app/global_comman/signup/signup.component.html
+++ b/src/app/global_comman/signup/signup.component.html
@@ -1,5 +1,6 @@
 
 <div class="p1dv1 col-11">
+    <button (click)="next()">Next</button>
     <div class="col-12 mt-5 container">
         <!-- add reactive form module in app.module.ts-->
         <form [formGroup]="form" (ngSubmit)="signup()">
