tutorial game initial development done

--- a/src/app/global_comman/sidenav/sidenav.component.html
+++ b/src/app/global_comman/sidenav/sidenav.component.html
@@ -22,9 +22,9 @@
                     </a>
                 </li>
                 <li class="nav-item itm col-12 align-self-end">
-                    <a routerLink="/login" class="lnk nav-link  px-0 text-truncate">
+                    <a routerLink="/view-tutorials" class="lnk nav-link  px-0 text-truncate">
                         
-                        <span class="ittxt" >LOGIN</span>
+                        <span class="ittxt" >Tutorials</span>
                     </a>
                 </li>
     
