--- a/src/app/global_comman/header/header.component.html
+++ b/src/app/global_comman/header/header.component.html
@@ -14,7 +14,7 @@
             <a class="nav-link" routerLink="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/test">Test</a>
+            <a class="nav-link" routerLink="/signup">Test</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/login" *ngIf=" !isLoggedIn()">Login</a>
