--- a/src/app/global_comman/sidenav/sidenav.component.html
+++ b/src/app/global_comman/sidenav/sidenav.component.html
@@ -1,36 +1,29 @@
 <!--<div class="sideNav-parent overflow-auto">  overflow-auto makes the sidenave scrollable-->
-    <div class="sideNav-parent ">
-        <div class="sideNav-child1 " >
-    
-    
+    <!-- <div class="sideNav-parent"> -->
             <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                 
-                <li class="nav-item itm col-12  align-self-end" >
-                    
-                    <a routerLink="/home" class="lnk nav-link  px-0 text-truncate"  >
-                        
-                        
-                        <span class="ittxt ">HOME  PAGE</span>
-    
-                    </a>
-                    
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a routerLink="/test" class="lnk nav-link  px-0 text-truncate">
-                        
-                        <span class="ittxt">TEST  PAGE</span>
+                <li class="itm col-12" >
+                    <a routerLink="/home" class="nav-link">
+                        <i class="fas fa-home icon-home" style="color: #070707;"></i> <span class="ittxt">Home</span>
                     </a>
                 </li>
-                <li class="nav-item itm col-12 align-self-end">
+
+                <li class="itm col-12">
+                    <a routerLink="/test" class="nav-link">
+                        <i class="fas fa-user icon-profile" style="color: #070707;"></i><span class="ittxt">Profile</span>
+                    </a>
+                </li>
+
+                <!-- <li class="nav-item itm col-12 align-self-end">
                     <a routerLink="/login" class="lnk nav-link  px-0 text-truncate">
                         
-                        <span class="ittxt" >LOGIN</span>
+                        <span class="ittxt" >Login</span>
                     </a>
-                </li>
+                </li> -->
     
     
             </ul>
-            <ul class="nav nav-pills=" id="menu22" >
+            <!-- <ul class="nav nav-pills=" id="menu22" >
     
                 <li class=" itm2 col-12 ">
                     
@@ -38,8 +31,8 @@
                         
     
                         
-                        <span class="  ittxt2">TEST</span>  </a>
-                    <!--show-->
+                        <span class= "ittxt">Test</span>  </a>
+                    
                     <ul class="collapse  nav  nav-pills " id="submenu22" data-bs-parent="#menu22">
                         <li class="w-100 itm4  px-0  col-12 " >
                             <a routerLink="/calender-view" class="nav-link  px-0  col-12">
@@ -51,196 +44,7 @@
                         </li>
                     </ul>
                 </li>
-            </ul>
+            </ul> -->
 
-
-    
-            <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu3">
-                <li class="nav-item itm col-12 align-self-end">
-                    <a routerLink="/view-products-non-log" class="nav-link  px-0 text-truncate">
-                        
-                        
-                        <span class="ittxt">HELP</span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a routerLink="/settings" class="nav-link px-0 text-truncate">
-                        
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a routerLink="/forbidden" class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a routerLink="/yellow-page" class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li>
-                <li class="nav-item itm col-12 align-self-end">
-                    <a class="nav-link  px-0">
-                        <i class="fs-4 bi-house"></i>
-                        
-                        <span class="ittxt"></span>
-                    </a>
-                </li> 
-    
-    
-    
-    
-    
-            </ul>
-    
-    
-    
-            <hr>
-        </div>
-    
-    
-    
-    
-    
-        
-    
-    </div>
+    <!-- </div> -->
     
