--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,10 @@
 
 <!--class="container-fluid px-0 overflow-hidden"-->
 <div class="container-fluid px-0 overflow-hidden"  >
-<div class="row" *ngIf=" isLoggedIn() && isVisibleSidebar()"> <!--  -->
+<div class="row" *ngIf=" isLoggedIn() && isVisibleSidebar()"> 
 
 
-  <div class="  col-lg-2   col-md-3 col-4 min-vh-100 " style="background: #1b1c1b;" >
+  <div class="col-lg-2 col-md-3 col-4 min-vh-100 " style="background:#ffffff" >
     <app-sidenav  ></app-sidenav>
   </div>
   <div class="pg col-lg-10 col-md-9 col-8   min-vh-100 "  >
