--- a/src/app/global_comman/home/home.component.css
+++ b/src/app/global_comman/home/home.component.css
@@ -1,13 +1,27 @@
 .p1dv1{
-    padding-left: 2%;
+    /* padding-left: 2%;
     padding-right: 2%;
     padding-top: 2%;
-    padding-bottom: 2%;
-    margin-left: 10%;
-    margin-right: auto;
+    padding-bottom: 2%; */
     margin-top:2%;
-    background-color: lightgrey;
-}
+    display: block;
+    margin-left: auto;
+    margin-right: auto;}
+    /* background-image: url('/assets/map.png');
+    background-repeat: no-repeat;} */
+    /* background-color: rgb(241, 217, 191) ;*/
+/* 
+p1dv1{
+    background-image: url('/assets/map.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 100%;
+    height: 100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  } */
 
 p {
     text-indent: auto;
@@ -25,6 +39,9 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 200%;
-    height:100%;
+    width: 110%;
+    height: 70%; 
+    display: flex;
+    /* width: 100%;
+    height:100%; */
 } 
