--- a/src/app/global_comman/home/home.component.html
+++ b/src/app/global_comman/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="p1dv1 col-8" >
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-3 ">
         </div>
         <div class="col-6 ">
@@ -8,20 +8,19 @@
         </div>
         <div class="col-1"  >
         </div>
-    </div>
+    </div> -->
 
     <div class="img mt-4">
-        <!--<img src="https://i.assetzen.net/i/2VY7rX5z2Jh1/w:1920/h:/q:70.jpg"  class="img-fluid imgcus1" alt="Responsive image">-->
         <div class="row">
             <div >
-                <img src="assets/uni-1.jpg" class="img-fluid imgcus1" alt="Responsive image">
+                <img src="/assets/map2.png" class="imgcus1" alt="Responsive image">
             </div>
 
         </div>
         
         
     </div>
-    <div>
+    <!-- <div>
       <br> 
       <br>  
       <br> 
@@ -30,5 +29,5 @@
         <b>We are here to keep your mental well being doing good . </b>
          - YM Team
         </p>
-    </div>    
+    </div>     -->
 </div>
