--- a/src/app/global_comman/login/login.component.html
+++ b/src/app/global_comman/login/login.component.html
@@ -1,5 +1,6 @@
-<div class="container mt-5">
-    <div class="card" style="padding: 20px;">
+<!-- <div class="background"> -->
+    <!-- <div class="card" style="padding: 20px;"> -->
+    <!-- <div class="login-box">
         <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
             <input type="text"
             ngModel
@@ -23,5 +24,56 @@
         </form>
         
     </div>
-</div>
+</div> -->
 
+
+<!-- <div class="background">
+    <div class="login-box">
+      <h2>Login</h2>
+        <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+
+            <div class="input-group">
+                <label for="username">Username:</label>
+                <input type="text" ngModel name="username" id="username" class="form-control mb-3" required>
+            </div>
+
+            <div class="input-group">
+                <label for="username">Password:</label>
+                <input type="password" ngModel name="password" id="password" class="form-control mb-3" required>
+            </div>
+            <div class="input-group">
+                <button type="submit" value="Login"></button>
+            </div>
+        
+        </form>
+        
+    </div>
+</div> -->
+
+
+<div class="background">
+    <!-- <div class="card" style="padding: 20px;"> -->
+    <div class="login-box">
+        <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+            <div class="input-group">
+                <label for="username">Username:</label>
+                <input type="text" ngModel name="username" id="username" class="form-control mb-3">
+            </div>
+
+            <div class="input-group">
+                <label for="username">Password:</label>
+                <input type="password" ngModel name="password" id="password" class="form-control mb-3">
+            </div>
+
+            <div>
+                <input type="submit" value="Login" class="btn btn-submit">
+                <!-- <input type="submit" value="Sign Up" class="btn btn-submit" (click)="signup()"> -->
+            </div>
+
+            <!-- <input type="submit"
+            value="Login"
+            class="btn btn-outline-primary form-control rounded-0"> -->
+        </form>
+        
+    </div>
+</div>
