--- a/src/app/global_comman/home/home.component.css
+++ b/src/app/global_comman/home/home.component.css
@@ -9,16 +9,18 @@
 }*/
 
 .p1dv1{
-    background-image: url('/assets/map.png');
+    /* background-image: url('/assets/map.png'); */
     background-color: rgb(241, 217, 191) ;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     width: 100%;
     height: 100vh; 
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
   } 
 
 p {
